# cyllor

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  limine.conf  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
kernel/: Cargo.toml  build.rs  linker-aarch64.ld  linker-x86_64.ld
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.rs  context.rs  exceptions.rs  gic.rs  mod.rs  paging.rs  syscall.rs  timer.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/drivers/: drm.rs  framebuffer.rs  input.rs  mod.rs  pci.rs  pty.rs  uart.rs
kernel/src/drivers/virtio/: block.rs  gpu.rs  input.rs  mmio.rs  mod.rs  net.rs
kernel/src/fs/: devfs.rs  ext4.rs  fdtable.rs  mod.rs  pipe.rs  procfs.rs  tmpfs.rs  vfs.rs
kernel/src/ipc/: futex.rs  mod.rs  signal.rs  timerfd.rs
kernel/src/mm/: heap.rs  mmap.rs  mod.rs  page_table.rs  pmm.rs  shm.rs  vmm.rs
kernel/src/net/: mod.rs  smoltcp.rs
kernel/src/sched/: cpu.rs  elf.rs  mod.rs  process.rs  scheduler.rs  wait.rs
kernel/src/sync/: mod.rs  mutex.rs  rwlock.rs  spinlock.rs
kernel/src/syscall/: fs.rs  io.rs  mm.rs  mod.rs  net.rs  process.rs  signal.rs  time.rs
tools/: check_arch_leak.ps1  mkimage.sh  mkrootfs.sh  xfce_smoke.ps1
