[package]
name = "cyllor-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.6"
log = "0.4"
spin = "0.9"
bitflags = "2"
linked_list_allocator = "0.10"
goblin = { version = "0.9", default-features = false, features = ["elf32", "elf64", "alloc"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9"
tock-registers = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
